# lsp_maintainers

./: .gitignore  Default.sublime-commands  README.md  lsp_maintainers.sublime-settings  main.py
commands/: clone_lsp_projects.py
release38/: LSP-info-for-release.json  README.md  make-release.js  merge-prs.js  package-lock.json  package.json
repositories/: pyproject.toml
scripts/: checkout-repos.py  generate-table.py  utils.py
