[project]
name = "lsp-maintainers"
version = "1.0.0"
license = "MIT"
requires-python = "==3.8.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "orjson==3.10.15",
    "pyright>=1.1.410",
    "typing-extensions==4.13.2",
]

[tool.pyright]
pythonVersion = "3.8"
stubPath = "./LSP/stubs"
typeCheckingMode = "standard"
extraPaths = [
    "Sublime Text.app/Contents/MacOS/Lib/python38/",
    "lsp_utils/",
    "sublime-aio/src",
    "sublime_lib/"
]
include = [
    "*"
]
exclude = [
    "*/*/*"
]
