[project]
name = "lsp-maintainers"
version = "1.0.0"
license = "MIT"
requires-python = "==3.8.*"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2==3.1.3",
    "more-itertools==10.5.0",
    "orjson==3.10.15",
    "pyright>=1.1.410",
    "typing-extensions==4.13.2",
    "watchdog==4.0.2",
]

[tool.pyright]
pythonVersion = "3.8"
reportArgumentType = "none"
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "warning"
reportIncompatibleMethodOverride = "none"
reportInvalidTypeArguments = "none"
reportInvalidTypeVarUse = "none"
reportMissingModuleSource = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportPossiblyUnboundVariable = "none"
reportRedeclaration = "none"
stubPath = "./stubs"
typeCheckingMode = "standard"
extraPaths = [
    "Sublime Text.app/Contents/MacOS/Lib/python38/",
    "lsp_utils/",
    "sublime-aio/src",
]
exclude = [
    "./Sublime Text.app/",
    "./LSP-basedpyright/syntaxes",
    "./LSP-jdtls/modules",
    "./LSP-julia/testrunner",
    "./LSP-metals/core",
    "./LSP-pyright/syntaxes",
    "./sublime_aio",
    "./sublime_lib",
    "**/__pycache__",
    "**/third_party",
    "**/node_modules",
    "**/.*"
]
